# FibBot

./: Cargo.toml  Dockerfile  MAKEFILE  Makefile  README.md  action.yml
.github/workflows/: fibbot.yml  test.yml
.qodo/: history.sqlite
scr/: parse.rs
src/: comment.rs  config.rs  extract.rs  fetch_pr.rs  fib.rs  fibonacci.rs  github.rs  github_api.rs  main.rs  pr_parser.rs  test.rs
