[package]
name = "fibbot"
version = "0.1.0"
edition = "2018"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
mockito = "0.31"
thiserror = "2.0" 
octocrab = "0.43"
regex = "1.10"
openssl = { version = "0.9", optional = true }

[dev-dependencies]
