[package]
name = "fibbot"
version = "0.1.0"
edition = "2018"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
octocrab = "0.43"
regex = "1"

# If you need config crate
# config = "0.13"
